Fixed alignment on responsive

--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -102,7 +102,7 @@
     margin: 0px;
     padding: 5px;
   }
-  .searchpage__body {
+  .searchpage__body__title {
     text-align: center;
   }
 }
